# taggymctagface

./: .gitignore  Pipfile  README.md  boardnamedevices.json  commands.sqlite  commands.sqlite-shm  commands.sqlite-wal  main.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
cogs/: add.py  admin.py  birthday.py  board2device.py  brunch.py  crosblog.py  crosupdates.py  dealwatcher.py  delete.py  device2board.py  errhandle.py  getkarma.py  help.py  helpers.py  history.py  karma.py  leaderboard.py  list.py  modhistory.py  ping.py  rolecount.py  rules.py  search.py  setkarma.py  stats.py  timeout.py
commands/: tag.js
commands/custom_commands/: add.js  birthday.js  board2device.js  cros-serving.js  delete.js  device2board.js  help.js  helpers.js  info.js  list.js  rules.js  unknown.js  verify.js
commands/util/: unknown-command.js
events/: message.js
